--- a/css/init.css
+++ b/css/init.css
@@ -2,42 +2,42 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: "Times New Roman", Times, serif;
   background-color: #f0f4f8;
   display: flex;
   flex-direction: column;
 }
 
-  /*offer text in motion */
-  .offer-text-container {
-    width: 100%;
-    height: 40px;
-    background-color: #d7b6db;
-    color: white;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+/*offer text in motion */
+.offer-text-container {
+  width: 100%;
+  height: 40px;
+  background-color: #d7b6db;
+  color: white;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.offer-text-container span {
+  display: inline-block;
+  white-space: nowrap;
+  padding-left: 100%;
+  color: #000;
+  font-size: 18px;
+  font-weight: bold;
+  animation: scroll-text 30s linear infinite;
+}
+
+@keyframes scroll-text {
+  0% {
+    transform: translateX(0%);
   }
-  
-  .offer-text-container span {
-    display: inline-block;
-    white-space: nowrap;
-    padding-left: 100%;
-    color: #000;
-    font-size: 18px;
-    font-weight: bold;
-    animation: scroll-text 30s linear infinite;
+  100% {
+    transform: translateX(-100%);
   }
-  
-  @keyframes scroll-text {
-    0% {
-      transform: translateX(0%);
-    }
-    100% {
-      transform: translateX(-100%);
-    }
-  }
+}
 
 /* Header / Banner */
 .banner img {
