--- a/css/shop.css
+++ b/css/shop.css
@@ -1,4 +1,4 @@
-/* Estilo general del sitio */
+/* body */
 body {
   font-family: "Times New Roman", Times, serif;
   margin: 0;
@@ -71,7 +71,7 @@ body {
   color: white;
 }
 
-/* Textos de oferta en movimiento */
+/*offerts*/
 .offer-text-container {
   width: 100%;
   height: 40px;
@@ -93,7 +93,7 @@ body {
   animation: scroll-text 30s linear infinite;
 }
 
-/* Modo oscuro */
+/* dark mode */
 body.dark-mode {
   background-color: #121212 !important;
   color: #fffcfc !important;
@@ -190,40 +190,38 @@ body.dark-mode .carousel-controls button:hover {
   background-color: #ff80ab;
 }
 
-/* Estilos para la tabla de pedidos en modo oscuro */
 body.dark-mode #ordersTable {
-  background-color: #333; /* Fondo oscuro para la tabla */
-  color: #fff; /* Color de texto blanco para contraste */
+  background-color: #333;
+  color: #fff;
 }
 
 body.dark-mode #ordersTable th,
 body.dark-mode #ordersTable td {
-  border: 1px solid #444; /* Borde gris oscuro para las celdas */
-  padding: 10px; /* Espaciado interno en las celdas */
+  border: 1px solid #444;
+  padding: 10px;
 }
 
 body.dark-mode #ordersTable th {
-  background-color: #444; /* Fondo oscuro para los encabezados */
-  color: #ff80ab; /* Color de texto de los encabezados */
+  background-color: #444;
+  color: #ff80ab;
 }
 
 body.dark-mode #ordersTable td {
-  background-color: #1e1e1e; /* Fondo de las celdas en modo oscuro */
+  background-color: #1e1e1e;
 }
 
-/* Estilo para los botones dentro de la tabla */
 body.dark-mode #ordersTable button {
-  background-color: #e91e63; /* Fondo rosa para los botones */
-  color: white; /* Texto blanco en los botones */
-  border: none; /* Sin borde */
-  padding: 5px 10px; /* Relleno dentro del botón */
-  cursor: pointer; /* Puntero de mano */
-  border-radius: 5px; /* Bordes redondeados */
-  transition: background-color 0.3s ease; /* Transición para el hover */
+  background-color: #e91e63;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
 body.dark-mode #ordersTable button:hover {
-  background-color: #ff80ab; /* Color del fondo cuando el ratón pasa sobre el botón */
+  background-color: #ff80ab;
 }
 
 @keyframes scroll-text {
