--- a/css/orders.css
+++ b/css/orders.css
@@ -1,8 +1,25 @@
 /*main content*/
 .main-content {
-  padding: 15px 30px;
-  margin: 20px;
+  max-width: 800px;
+  margin: 30px auto;
+  padding: 10px;
   font-size: 16px;
   text-align: center;
-  margin-top: 50px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+}
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: #d3cce3;
+  color: #333;
+  font-size: 14px;
+  text-align: center;
+  margin-top: auto;
+  padding: 3px 4px;
+  max-width: 1500px;
+  margin: 0 auto;
 }
