--- a/css/shop.css
+++ b/css/shop.css
@@ -1,8 +1,7 @@
-<<<<<<< HEAD
+
 /* --- Estilos generales --- */
-=======
+
 /* body */
->>>>>>> origin/monica
 body {
   font-family: "Times New Roman", Times, serif;
   margin: 0;
@@ -106,7 +105,6 @@ body.dark-mode .product-card {
   border-radius: 4px;
 }
 
-<<<<<<< HEAD
 .actions input[type="text"] {
   width: 40px;
   text-align: center;
@@ -249,7 +247,7 @@ body.dark-mode .cart-row {
 
 body.dark-mode .cart-header {
   border-color: #ff80ab;
-=======
+
 /*offerts*/
 .offer-text-container {
   width: 100%;
@@ -410,5 +408,5 @@ body.dark-mode #ordersTable button:hover {
   100% {
     transform: translateX(-100%);
   }
->>>>>>> origin/monica
+}
 }
