--- a/css/map.css
+++ b/css/map.css
@@ -75,14 +75,17 @@ body {
   }
 
   /*MAP*/
-  .map-container {
-    margin: 40px auto;
-    max-width: 1000px;
-    width: 90%;
+  #map {
+    width: 50%;
+    height: 350px;
+    margin: 40px auto 30px;
     border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 2;
+    display: block;
+    min-height: 350px;
   }
+  
 
   .info-contacto {
     max-width: 1000px;
